--- a/app/src/main/res/layout/content_main_list_layout.xml
+++ b/app/src/main/res/layout/content_main_list_layout.xml
@@ -52,6 +52,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/currentAttandance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="6sp"
+            android:text="CURRENT ATTANDANCE"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@android:color/holo_green_light"
         android:orientation="horizontal"
         android:textColor="#FFFFFF">
